apps/nginx-blue/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-blue
  namespace: nginx-blue
  labels:
    app: nginx-blue
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: nginx-blue
